simple/prod/gateway/gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ms-prod-services
  namespace: ms-prod
spec:
  hosts:
    - "*"
  gateways:
    - ms-prod-gateway
  http:
    # book service
    - match:
        - uri:
            prefix: /books
        - uri:
            prefix: /authors
      route:
        - destination:
            host: book-service.ms-prod.svc.cluster.local
            subset: stable
          weight: 90
        - destination:
            host: book-service.ms-prod.svc.cluster.local
            subset: canary
          weight: 10
    # library service
    - match:
        - uri:
            prefix: /libraries
        - uri:
            prefix: /stock
      route:
        - destination:
            host: library-service.ms-prod.svc.cluster.local
            port:
              number: 80
    # search service
    - match:
        - uri:
            prefix: /search
      route:
        - destination:
            host: search-service.ms-prod.svc.cluster.local
            port:
              number: 80
    # sales service
    - match:
        - uri:
            prefix: /sales
      route:
        - destination:
            host: sales-service.ms-prod.svc.cluster.local
            port:
              number: 80
